# Logic_Api

./: CMakeLists.txt  main.cpp
Headers/: ExpressionSymbol.h  LogicCalculator.h  Operation.h  Variable.h
Source/: LogicCalculator.cpp
